--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -117,7 +117,8 @@ h1.texto-actividad {
   /*font-weight: 100;*/
   padding: 1.5rem;
   background: linear-gradient(to right, #21659f80, #6c326980);
-  color: var(--menuTextoHover);
+  /*color: var(--menuTextoHover);*/
+  color: blue;
   letter-spacing: 1.3rem;
   text-shadow: 0 0 3px var(--mainQuienesFondoTexto);
   border-top: 1px solid var(--slideBotonesFondo);
@@ -627,3 +628,4 @@ address.info-footer {
   }
 
 }
+
