--- a/estilos/responsive.css
+++ b/estilos/responsive.css
@@ -67,8 +67,8 @@
 }
 
 
-/* Grande: hasta 690px */
-@media (max-width: 690px) {
+/* Grande: hasta 760px */
+@media (max-width: 760px) {
   .menu ul {
     opacity: 0;
     transform: translateY(-10px);
@@ -128,6 +128,10 @@
     padding-top: 8px;
     padding-bottom: 8px;
   }
+
+  .bloques-contacto {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 /* Hasta 768px */
@@ -151,9 +155,9 @@
   }
 
   .ensayos-detallados .bloque-ensayo .numero {
-    font-size: 6rem;
+    font-size: 4rem;
     top: 0;
-    /*transform: translate(-50%, 0);*/
+    transform: translate(-50%, -100%);
   }
 
   .capacidades-detalladas {
@@ -181,7 +185,7 @@
   .bloque-capacidades .numero {
     font-size: 3rem;
     top: 0;
-    transform: translate(-50%, 0);
+    /*transform: translate(-50%, 0);*/
   }
 
   .texto.izquierda,
