--- a/estilos/estilosCapacidades.css
+++ b/estilos/estilosCapacidades.css
@@ -2,6 +2,10 @@ section {
   margin: 3rem 0;
 }
 
+h2::after{
+  background-color: var(--mainCapacidadesLineaSubH2);
+}
+
 .capacidades-detalladas {
   display: flex;
   flex-direction: column;
