--- a/estilos/estilosCapacidades.css
+++ b/estilos/estilosCapacidades.css
@@ -77,6 +77,12 @@ h2::after{
   display: flex;
   gap: 2rem;
   justify-content: center;
+  align-items: flex-start;
+}
+
+.texto span {
+  display: block;
+  margin-bottom: 2rem;
 }
 
 .texto.izquierda {
