--- a/estilos/estilosCapacidades.css
+++ b/estilos/estilosCapacidades.css
@@ -82,7 +82,6 @@ h2::after{
 
 .texto span {
   display: block;
-  margin-bottom: 2rem;
 }
 
 .texto.izquierda {
@@ -92,7 +91,58 @@ h2::after{
 .texto.derecha {
   text-align: right;
 }
+.contenedor-bloques2{
+  display: flex;
+  background-color: var(--mainEnsayosTextoIconos);
+  width: 93%;
+  margin: 3rem 0;
+  padding: 1rem;
+  border-radius: 10px;
+  gap: 2rem;
+}
+
+.imagenes-bloque2 {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.imagenes-bloque2 img {
+  max-width: fit-content;
+  /*width: 32vw;*/
+  /*height: 32vw;*/
+  object-fit: cover;
+}
+
+.imagenes-bloque2.amplificadores img{
+  width: 100%;
+}
 
 .izquierda, .derecha{
   transform: none;
+}
+
+.tabla-original.anecoica {
+  width: unset;
+}
+
+.dos-filas {
+  flex-direction: column; /* Apila los hijos verticalmente */
+  gap: 4rem;
+}
+
+.contenedor-fila1,
+.contenedor-fila2 {
+ display: flex;
+ gap: 0.5rem;
+}
+
+.dos-filas .texto {
+ max-width: unset;
+}
+
+.contenedor-fila2 .texto.izquierda,
+.contenedor-fila2 .texto.derecha {
+ width: 45%;
 }
